--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -17,7 +17,7 @@ log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
 log4j.appender.VELOCITY = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.VELOCITY.File=H:/log/velocity.log
+log4j.appender.VELOCITY.File=logs/velocity.log
 log4j.appender.VELOCITY.Append=false
 log4j.appender.VELOCITY.Encoding=GBK
 log4j.appender.VELOCITY.layout=org.apache.log4j.PatternLayout
