--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 		<spring.version>3.1.4.RELEASE</spring.version>
 		<cxf.version>3.0.1</cxf.version>
 		<jetty.version>9.2.7.v20150116</jetty.version>
+		<hystrix.version>1.3.16</hystrix.version>
+		<hystrix-metrics-event-stream.version>1.1.2</hystrix-metrics-event-stream.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -281,6 +283,21 @@
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
 			<version>3.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-core</artifactId>
+			<version>${hystrix.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-metrics-event-stream</artifactId>
+			<version>${hystrix-metrics-event-stream.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.rxjava</groupId>
+			<artifactId>rxjava-core</artifactId>
+			<version>0.20.7</version>
 		</dependency>
 	</dependencies>
 
