--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,12 @@
 			<artifactId>rxjava-core</artifactId>
 			<version>0.20.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.thoughtworks.paranamer</groupId>
+			<artifactId>paranamer</artifactId>
+			<version>2.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
