--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,31 @@
 			<artifactId>paranamer</artifactId>
 			<version>2.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>2.4.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.cfg4j</groupId>
+			<artifactId>cfg4j-core</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+		<!-- For Consul integration -->
+		<dependency>
+			<groupId>org.cfg4j</groupId>
+			<artifactId>cfg4j-consul</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+		<!-- For git integration -->
+		<dependency>
+			<groupId>org.cfg4j</groupId>
+			<artifactId>cfg4j-git</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
