--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,11 @@
 			<artifactId>jooq-codegen</artifactId>
 			<version>3.8.6</version>
 		</dependency>
-
+		<dependency>
+            <groupId>uk.com.robust-it</groupId>
+            <artifactId>cloning</artifactId>
+			<version>1.9.0</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
