--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,12 @@
 			<artifactId>jooq-codegen</artifactId>
 			<version>3.8.6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mapdb/mapdb -->
+		<dependency>
+			<groupId>org.mapdb</groupId>
+			<artifactId>mapdb</artifactId>
+			<version>3.0.3</version>
+		</dependency>
 		<dependency>
 			<groupId>uk.com.robust-it</groupId>
 			<artifactId>cloning</artifactId>
