--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,12 @@
 			<artifactId>UserAgentUtils</artifactId>
 			<version>1.20</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.ning/async-http-client -->
+		<dependency>
+			<groupId>com.ning</groupId>
+			<artifactId>async-http-client</artifactId>
+			<version>1.9.40</version>
+		</dependency>
 	</dependencies>
 
 	<build>
