--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,12 @@
 			<artifactId>bloom-filter</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		<!-- https://lmax-exchange.github.io/disruptor/ -->
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
