--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,11 @@
             <artifactId>rules</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware.yamlbeans</groupId>
+            <artifactId>yamlbeans</artifactId>
+            <version>1.13</version>
+        </dependency>
 
     </dependencies>
 
