feat: msgpack usage

--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,11 @@
             <artifactId>yamlbeans</artifactId>
             <version>1.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>msgpack</artifactId>
+            <version>0.6.12</version>
+        </dependency>
 
     </dependencies>
 
