feat: a simple httpreqeust api

--- a/pom.xml
+++ b/pom.xml
@@ -338,7 +338,11 @@
             <artifactId>msgpack</artifactId>
             <version>0.6.12</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.kevinsawicki</groupId>
+            <artifactId>http-request</artifactId>
+            <version>5.6</version>
+        </dependency>
     </dependencies>
 
     <build>
