--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,21 @@
             <artifactId>http-request</artifactId>
             <version>5.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+            <version>1.3.0-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-demo-basic</artifactId>
+            <version>0.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-dashboard</artifactId>
+            <version>0.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
