--- a/pom.xml
+++ b/pom.xml
@@ -406,7 +406,12 @@
             <artifactId>failsafe</artifactId>
             <version>3.1.0</version>
         </dependency>
-
+        <!-- https://search.maven.org/artifact/com.alibaba/transmittable-thread-local -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.12.4</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
